# recursive-pixel-editor

./: CMakeLists.txt  README.md  build_emscripten.sh  build_native.sh  run_web.sh
build_emscripten/: CMakeCache.txt  Makefile  cmake_install.cmake  pixelrecursor.js  pixelrecursor.wasm
build_native/: CMakeCache.txt  Makefile  cmake_install.cmake  pixelrecursor
src/: Palette.cpp  Palette.h  PixelEditor.cpp  PixelEditor.h  RecursiveRenderer.cpp  RecursiveRenderer.h  main.cpp
web/: canvas-example.html  index.html  pixelrecursor.wasm
